refactor: rename github-link class to link for better reusability

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <img src="/img/favicon.jpg" alt="BlockHaity" class="avatar">
             <h2 style="text-align: center;"><b>BlockHaity</b></h2>
             <p style="text-align: center;">一个坐牢高中牲</p>
-            <div class="github-link">
+            <div class="link">
                 <a href="https://github.com/BlockHaity">
                     <svg width="20" height="20" viewBox="0 0 1024 1024" fill="white" style="vertical-align: middle;">
                         <path
