--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@
                     <span style="font-size: 15px; vertical-align: middle;">GitHub</span>
                 </a>
             </div>
+            <div class="link">
+                <a href="https://bas.blockhaity.qzz.io">
+                    <svg width="20" height="20" viewBox="0 0 1024 1024" fill="white" style="vertical-align: middle;">
+                        <path
+                            d="M832 64H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V96c0-17.7-14.3-32-32-32zm-600 72h560v208H232V136zm560 480H232V408h560v208zm0 272H232V688h560v200zM304 240a40 40 0 1 0 80 0 40 40 0 1 0-80 0zm0 272a40 40 0 1 0 80 0 40 40 0 1 0-80 0zm0 272a40 40 0 1 0 80 0 40 40 0 1 0-80 0z" />
+                    </svg>
+                    <span style="font-size: 15px; vertical-align: middle;">个人博客</span>
+                </a>
+            </div>
         </div>
     </div>
 
@@ -54,4 +63,3 @@
 </body>
 
 </html>
-
