refactor: remove search box and adjust sidebar layout

--- a/index.html
+++ b/index.html
@@ -25,12 +25,6 @@
 </head>
 
 <body>
-
-    <div class="search-box">
-        <i class="bing-icon"></i>
-        <input type="text" placeholder="Bing搜索">
-    </div>
-
     <!-- 侧边栏卡片 -->
     <div class="sidebar-card">
         <div class="container">
@@ -55,11 +49,18 @@
                     <span style="font-size: 15px; vertical-align: middle;">个人博客</span>
                 </a>
             </div>
+            <div class="link">
+                <a href="https://api.blockhaity.qzz.io/docs">
+                    <svg width="20" height="20" viewBox="0 0 1024 1024" fill="white" style="vertical-align: middle;">
+                        <path
+                            d="M832 64H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V96c0-17.7-14.3-32-32-32zM696 768H328c-4.4 0-8-3.6-8-8v-56c0-4.4 3.6-8 8-8h368c4.4 0 8 3.6 8 8v56c0 4.4-3.6 8-8 8zm0-176H328c-4.4 0-8-3.6-8-8v-56c0-4.4 3.6-8 8-8h368c4.4 0 8 3.6 8 8v56c0 4.4-3.6 8-8 8zm0-176H328c-4.4 0-8-3.6-8-8v-56c0-4.4 3.6-8 8-8h368c4.4 0 8 3.6 8 8v56c0 4.4-3.6 8-8 8z" />
+                    </svg>
+                    <span style="font-size: 15px; vertical-align: middle;">API</span>
+                </a>
+            </div>
         </div>
     </div>
-
-    <!-- 引入搜索功能脚本 -->
-    <script src="/js/search.js"></script>
 </body>
 
 </html>
+
