refactor: update newtab page title

--- a/newtab/index.html
+++ b/newtab/index.html
@@ -16,7 +16,7 @@
     <meta http-equiv="Expires" content="31536000">
 
     <!-- 网站标题 -->
-    <title>BlockHaity的主页</title>
+    <title>BlockHaity的新标签页</title>
 
     <!-- 引入CSS文件 -->
     <link rel="stylesheet" href="/newtab/style.css">
