refactor: update script paths for newtab directory

--- a/newtab/index.html
+++ b/newtab/index.html
@@ -30,14 +30,14 @@
         <input type="text" placeholder="Bing搜索">
     </div>
     <!-- 引入搜索功能脚本 -->
-    <script src="/js/search.js"></script>
+    <script src="/newtab/js/search.js"></script>
 
     <div class="main-container">
         <div class="left-panel">
             <div class="card">
                 <h3>Hi,BlockHaity</h3>
                 <p>现在是：<span id="current-time"></span></p>
-                <script src="/js/time.js"></script>
+                <script src="/newtab/js/time.js"></script>
             </div>
             <div class="card">
                 <h3>快捷链接</h3>
