feat: add clickable GitHub repo links

--- a/html/newtab/github.html
+++ b/html/newtab/github.html
@@ -200,7 +200,8 @@
 </h3>
 
 <details open>
-    <summary id="BlueArchiveArisHelper/BAAH">BlueArchiveArisHelper/BAAH</summary>
+    <summary id="BlueArchiveArisHelper/BAAH"><a href="https://github.com/BlueArchiveArisHelper/BAAH"
+            target="_blank">BlueArchiveArisHelper/BAAH</a></summary>
     <h4>打开的PR</h4>
     <div id="pr-list"></div>
     <h4>打开的Issues</h4>
