style: add white color to GitHub repo link

--- a/html/newtab/github.html
+++ b/html/newtab/github.html
@@ -201,11 +201,11 @@
 
 <details open>
     <summary id="BlueArchiveArisHelper/BAAH"><a href="https://github.com/BlueArchiveArisHelper/BAAH"
-            target="_blank">BlueArchiveArisHelper/BAAH</a></summary>
+            target="_blank" style="color: white;">BlueArchiveArisHelper/BAAH</a></summary>
     <h4>打开的PR</h4>
     <div id="pr-list"></div>
     <h4>打开的Issues</h4>
-    <div id="issue-list"></div>
+    <div id="issue-list"></div> 
 </details>
 
 <script>
