--- a/card/newtab/github.html
+++ b/card/newtab/github.html
@@ -214,7 +214,7 @@
         const prList = container.querySelector('#pr-list');
 
         try {
-            const response = await fetch(`https://blockhaity.dpdns.org/ghapi/repos/${owner}/${repo}/pulls?state=open&sort=created&direction=desc`);
+            const response = await fetch(`https://api.github.com/repos/${owner}/${repo}/pulls?state=open&sort=created&direction=desc`);
 
             if (!response.ok) {
                 throw new Error(`HTTP错误! 状态: ${response.status}`);
@@ -264,7 +264,7 @@
         const issueList = container.querySelector('#issue-list');
 
         try {
-            const response = await fetch(`https://blockhaity.dpdns.org/ghapi/repos/${owner}/${repo}/issues?state=open&sort=created&direction=desc`);
+            const response = await fetch(`https://api.github.com/repos/${owner}/${repo}/issues?state=open&sort=created&direction=desc`);
 
             if (!response.ok) {
                 throw new Error(`HTTP错误! 状态: ${response.status}`);
