--- a/newtab/index.html
+++ b/newtab/index.html
@@ -83,7 +83,20 @@
                     </svg>
                     CloudFlare
                 </a>
-            </div>
+                <a href="//chat.deepseek.com/" class="link">
+                    <svg width="16" height="16" viewBox="0 0 16 16" style="margin-right: 5px;">
+                        <image href="/img/deepseek.svg" width="16" height="16" />
+                    </svg>
+                    DeepSeek
+                </a>
+                <a href="//192.168.1.5" class="link">
+                    <svg width="16" height="16" viewBox="0 0 24 24" style="margin-right: 5px;">
+                        <path fill="currentColor" d="M4 5h13v7h2V5c0-1.103-.897-2-2-2H4c-1.103 0-2 .897-2 2v12c0 1.103.897 2 2 2h8v-2H4V5z"/>
+                        <path fill="currentColor" d="m8 11-3 4h11l-4-6-3 4z"/>
+                        <path fill="currentColor" d="M19 14h-2v3h-3v2h3v3h2v-3h3v-2h-3z"/>
+                    </svg>
+                    NAS
+                </a>
             <div class="card">
                 <h3>卡片列表</h3>
                 <div id="card-list" class="card-list"></div>
