--- a/newtab/index.html
+++ b/newtab/index.html
@@ -83,13 +83,13 @@
                     </svg>
                     CloudFlare
                 </a>
-                <a href="//chat.deepseek.com/" class="link">
+                <a href="https://chat.deepseek.com/" class="link">
                     <svg width="16" height="16" viewBox="0 0 16 16" style="margin-right: 5px;">
                         <image href="/img/deepseek.svg" width="16" height="16" />
                     </svg>
                     DeepSeek
                 </a>
-                <a href="//192.168.1.5" class="link">
+                <a href="http://192.168.1.5" class="link">
                     <svg width="16" height="16" viewBox="0 0 24 24" style="margin-right: 5px;">
                         <path fill="currentColor"
                             d="M4 5h13v7h2V5c0-1.103-.897-2-2-2H4c-1.103 0-2 .897-2 2v12c0 1.103.897 2 2 2h8v-2H4V5z" />
